# habitat-ugens

./: .gitignore  CMakeLists.txt  LICENSE  README.md
HelpSource/Classes/: BletchleyPark.schelp  Colmatage.schelp  Petrichor.schelp  StationX.schelp  Tomograph.schelp
docs/: scales.md
examples/: codescan-test.scd  colmatage-test.scd  petrichor-test.scd  tomograph-test.scd
sc/: BletchleyPark.sc  Colmatage.sc  Petrichor.sc  StationX.sc  Tomograph.sc
src/: BletchleyPark.cpp  Colmatage.cpp  Petrichor.cpp  StationX.cpp  Tomograph.cpp
